feat: move description of user and countries endpoint to the separate file
